bin/tests/snapshots/inherit_first__05eb7fd4de2289471eaf60b66966cb82_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
stdenv.mkDerivation rec {
  version = "1.1.1";
  inherit (pkgs) pname;
}
---
<temp_file_path>>3:3:W:38:[inherit_first] `inherit` should come before the assignments above it
