bin/tests/snapshots/inherit_first__05eb7fd4de2289471eaf60b66966cb82_lint_json.snap
---
source: bin/tests/inherit_first.rs
---
stdenv.mkDerivation rec {
  version = "1.1.1";
  inherit (pkgs) pname;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_first",
      "note": "`inherit` is not at the top of the set",
      "code": 38,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 24
            }
          },
          "message": "`inherit` should come before the assignments above it",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 21
              },
              "to": {
                "line": 4,
                "column": 2
              }
            },
            "fix": "rec {\n  inherit (pkgs) pname;\n  version = \"1.1.1\";\n}"
          }
        }
      ]
    }
  ]
}
