bin/tests/snapshots/inherit_first__05eb7fd4de2289471eaf60b66966cb82_lint_stderr.snap
---
source: bin/tests/inherit_first.rs
---
stdenv.mkDerivation rec {
  version = "1.1.1";
  inherit (pkgs) pname;
}
---
[inherit_first] Warning: `inherit` is not at the top of the set
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit (pkgs) pname;
   │   ──────────┬──────────  
   │             ╰──────────── inherit should come before the assignments above it
───╯
