bin/tests/snapshots/inherit_first__2dea824b9b9743b332d817d6c79089b8_fix.snap
---
source: bin/tests/inherit_first.rs
---
{
  spellcheck = pkgs.callPackage ./spellcheck.pkg.nix { };
  inherit slugifier;
  test = pkgs.callPackage ./test.pkg.nix { };
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,7 @@
 {
+  inherit slugifier;
+
   spellcheck = pkgs.callPackage ./spellcheck.pkg.nix { };
-  inherit slugifier;
+
   test = pkgs.callPackage ./test.pkg.nix { };
 }
