bin/tests/snapshots/inherit_first__2dea824b9b9743b332d817d6c79089b8_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
{
  spellcheck = pkgs.callPackage ./spellcheck.pkg.nix { };
  inherit slugifier;
  test = pkgs.callPackage ./test.pkg.nix { };
}
---
<temp_file_path>>4:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
<temp_file_path>>3:3:W:38:[inherit_first] `inherit` should come before the assignments above it
