bin/tests/snapshots/inherit_first__2dea824b9b9743b332d817d6c79089b8_lint_stderr.snap
---
source: bin/tests/inherit_first.rs
---
{
  spellcheck = pkgs.callPackage ./spellcheck.pkg.nix { };
  inherit slugifier;
  test = pkgs.callPackage ./test.pkg.nix { };
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   test = pkgs.callPackage ./test.pkg.nix { };
   │   ─────────────────────┬─────────────────────  
   │                        ╰─────────────────────── a blank line should follow the inherit above
───╯
[inherit_first] Warning: `inherit` is not at the top of the set
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit slugifier;
   │   ─────────┬────────  
   │            ╰────────── inherit should come before the assignments above it
───╯
