bin/tests/snapshots/inherit_first__316e3ea921b970d93eaaa3cb768dea06_fix.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  apple = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,5 @@
 {
   inherit lib;
+
   apple = true;
 }
