bin/tests/snapshots/inherit_first__316e3ea921b970d93eaaa3cb768dea06_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  apple = true;
}
---
<temp_file_path>>3:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
