bin/tests/snapshots/inherit_first__316e3ea921b970d93eaaa3cb768dea06_lint_json.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  apple = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 16
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 4,
                "column": 2
              }
            },
            "fix": "{\n  inherit lib;\n\n  apple = true;\n}"
          }
        }
      ]
    }
  ]
}
