bin/tests/snapshots/inherit_first__316e3ea921b970d93eaaa3cb768dea06_lint_stderr.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  apple = true;
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   apple = true;
   │   ──────┬──────  
   │         ╰──────── a blank line should follow the inherit above
───╯
